--- a/src/stylesheet/base.css
+++ b/src/stylesheet/base.css
@@ -1,10 +1,11 @@
 @import "./reset.css";
 
 :root {
-    --app-light-bg:#f5fcff;
+    --app-light-bg:rgba(228, 229, 241, 0.5);
+    --app-white-bg:#f8f8f8;
     --app-dark-bg:#1f2227;
     --app-red:#ff3c57;
-    --app-yellow:#ffd13c;
+    --app-yellow:#F5C33B;
     --app-green:#33ab4e;
     --app-green-hover:#158f32;
     --app-purple:#380036;
@@ -13,7 +14,7 @@
     --app-pink:#f85fdc;
     --app-orange-hover:#fe7a2d;
     --app-light-blue:#0CBABA;
-    --app-light-blue-hover:#048989;
+    --app-light-blue-hover:#037f7f;
     --app-blue:#3b5998;
     --app-blue-hover:#30529c;
     --app-white:#fbfbfb;
@@ -39,9 +40,9 @@ body.index {
 }
 
 body:not(.index) {
-    /* background-color: #f1f1f1; */
-    background-color: rgba(115, 153, 213, 0.09);
-    /* background-image: linear-gradient(to right,#9dcdf3 , #fff); */
+    background-color: var(--app-light-bg);
+    /* background-color: rgba(115, 153, 213, 0.09); */
+    /* background-image: linear-gradient(to right,#9dcdf3 , var(--app-dark-text-color)); */
 }
 
 .container {
@@ -67,7 +68,7 @@ body:not(.index) {
 header {
     line-height: var(--app-header-line-height);
     height: 70px;
-    background-color: #f8f8f8;
+    background-color: var(--app-white-bg);
     min-width: 300px;
     position: relative;
     z-index: 10;
@@ -97,17 +98,282 @@ header {
 }
 
 footer {
-    height: 112px;
-    background-color: #f8f8f8;
+    background: var(--app-white-bg);
+    width: 100%;
+    bottom: 0;
+    left: 0;
+}
+  
+footer::before {
+    content: "";
+    left: 0;
+    top: 100px;
+    height: 1px;
+    width: 100%;
+}
+  
+footer .content {
+    padding: 30px 0; 
+}
+  
+footer .content .top {
     display: flex;
-    align-content: center;
     align-items: center;
-    min-width: 300px;
+    justify-content: space-between;
+    margin-bottom: 20px;
 }
 
-footer .flexbox {
+footer .content .top .logo-details {
+    color: var(--app-dark-text-color);
+    font-size: 30px;
+}
+
+footer .logo-details {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+  
+footer .logo_name {
+    font-weight: 700;
+    background: -webkit-linear-gradient(left, var(--app-purple) , var(--app-light-blue));
+    background: -o-linear-gradient(right, var(--app-purple), var(--app-light-blue));
+    background: -moz-linear-gradient(right, var(--app-purple), var(--app-light-blue));
+    background: linear-gradient(to right, var(--app-purple) , var(--app-light-blue)); 
+    -webkit-background-clip: text;
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+footer .content .top .media-icons {
+    display: flex;
+}
+
+footer .content .top .media-icons a {
+    height: 40px;
+    width: 40px;
+    margin: 0 8px;
+    border-radius: 50%;
+    text-align: center;
+    line-height: 40px;
+    color: var(--app-dark-text-color);
+    font-size: 17px;
+    text-decoration: none;
+    transition: all 0.4s ease;
+}
+
+footer .top .media-icons a:nth-child(1) {
+    background: var(--app-light-grey);
+}
+
+footer .top .media-icons a:nth-child(1):hover {
+    color: #4267b2;
+    transform: translateY(-3px);
+}
+  
+footer .top .media-icons a:nth-child(2) {
+    background: var(--app-light-grey);
+}
+
+footer .top .media-icons a:nth-child(2):hover {
+    color: #1da1f2;
+    transform: translateY(-3px);
+}
+
+footer .top .media-icons a:nth-child(3) {
+    background: var(--app-light-grey);
+}
+
+footer .top .media-icons a:nth-child(3):hover {
+    color: #e1306c;
+    transform: translateY(-3px);
+}
+
+footer .top .media-icons a:nth-child(4) {
+    background: var(--app-light-grey);
+}
+
+footer .top .media-icons a:nth-child(4):hover {
+    color: #0077b5;
+    transform: translateY(-3px);
+}
+
+footer .top .media-icons a:nth-child(5) {
+    background: var(--app-light-grey);
+}
+
+footer .top .media-icons a:nth-child(5):hover {
+    color: #ff0000;
+    transform: translateY(-3px);
+}
+  
+footer .content .link-boxes {
+    display: flex;
     justify-content: space-between;
 }
+  
+
+
+footer .content .link-boxes .box .link_name {
+    color: var(--app-dark-text-color);
+    font-size: 20px;
+    font-weight: 400;
+    margin-bottom: 14px;
+    position: relative;
+}
+  
+footer .content .link-boxes .box li {
+    margin: 6px 0;
+    list-style: none;
+}
+  
+footer .content .link-boxes .box li a {
+    color: var(--app-dark-text-color);
+    font-size: 14px;
+    font-weight: 400;
+    text-decoration: none;
+    opacity: 0.8;
+    transition: all 0.4s ease;
+}
+
+footer .content .link-boxes .box li a:hover {
+    opacity: 1;
+    text-decoration: underline;
+}
+  
+footer .link-boxes .input-box input {
+    height: 40px;
+    width: 100%;
+    outline: none;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    background-color: transparent;
+    border-radius: 4px;
+    padding: 0 15px;
+    font-size: 15px;
+    color: var(--app-dark-text-color);
+    margin-top: 5px;
+}
+
+footer .link-boxes .input-box input::placeholder {
+    color: var(--app-medium-grey);
+    font-size: 16px;
+}
+
+footer .input-field:focus,
+.input-field:not(:placeholder-shown).input-field:not(:focus) {
+    transform: translate(-6px, -6px);
+    padding: 28px 18px 18px;
+    animation: input-animation 0.5s;
+}
+  
+footer .link-boxes .input-box input[type="button"] {
+    background-color: var(--app-light-blue);
+    color: var(--app-light-text-color);
+    border: 2px double var(--app-dark-text-color);
+    border: none;
+    font-size: 18px;
+    font-weight: 500;
+    margin: 10px 0;
+    box-shadow: rgba(0, 0, 0, 0.118) 0px 5px 3px 0px;
+    opacity: 0.8;
+    cursor: pointer;
+    transition: all 0.4s ease;
+}
+  
+footer .input-box input[type="button"]:hover {
+    background-color: var(--app-light-blue-hover);
+    color: var(--app-light-text-color);
+}
+
+footer .bottom-details {
+    width: 100%;
+    background: var(--app-white-bg);
+}
+  
+footer .bottom-details .bottom_text {
+    max-width: 1250px;
+    margin: auto;
+    padding: 20px 40px;
+    display: flex;
+    justify-content: space-between;
+}
+
+footer .bottom-details .bottom_text span,
+footer .bottom-details .bottom_text a {
+    font-size: 14px;
+    font-weight: 300;
+    color: var(--app-dark-text-color);
+    opacity: 0.8;
+    text-decoration: none;
+}
+
+footer .bottom-details .bottom_text a:hover {
+    opacity: 1;
+    text-decoration: underline;
+}
+
+footer .bottom-details .bottom_text a {
+    margin-right: 10px;
+}
+
+@media (max-width: 900px) {
+    footer .content .link-boxes .box {
+        width: calc(100% / 5 - 10px);
+    }
+    footer .content .link-boxes {
+        flex-wrap: wrap;
+    }
+}
+
+@media (max-width: 700px) {
+    footer {
+        position: relative;
+    }
+    footer .content .top .logo-details {
+        font-size: 26px;
+    }
+    footer .content .top .media-icons a {
+        height: 35px;
+        width: 35px;
+        font-size: 14px;
+        line-height: 35px;
+    }
+    footer .content .link-boxes .box {
+        width: calc(100% / 3 - 10px);
+    }
+    footer .content .link-boxes .input-box {
+        width: 60%;
+    }
+    footer .bottom-details .bottom_text span,
+    footer .bottom-details .bottom_text a {
+        font-size: 12px;
+    }
+}
+
+@media (max-width: 520px) {
+    footer::before {
+        top: 145px;
+    }
+    footer .content .top {
+        flex-direction: column;
+    }
+    footer .content .top .media-icons {
+        margin-top: 16px;
+    }
+    footer .content .link-boxes .box {
+        width: calc(100% / 2 - 10px);
+        text-align: center;
+    }
+    footer .content .link-boxes .input-box {
+        width: 100%;
+    }
+    footer .box {
+        margin-bottom: 1rem;
+    }
+    footer .policy_terms {
+        margin-left: 2rem;
+    }
+} 
 
 
 /**************************************************/
@@ -142,5 +408,17 @@ footer .flexbox {
     to {
         opacity: 1;
         transform: translate(0);
+    }
+}
+
+@keyframes input-animation {
+    0% {
+      transform: translate(0);
+    }
+    40% {
+      transform: translate(-7px, -7px);
+    }
+    60% {
+      transform: translate(-5px, -5px);
     }
 }
