Changes: Update mobile header for home page

--- a/src/stylesheet/home.css
+++ b/src/stylesheet/home.css
@@ -28,6 +28,7 @@ header .login-logo-bg .logo-image i {
 
 header .login-logo-bg .logo-name {
     font-weight: 700;
+    display: inline;
     color: var(--app-dark-text-color);
 }
 
