--- a/src/stylesheet/base.css
+++ b/src/stylesheet/base.css
@@ -75,7 +75,7 @@ header {
 }
 
 .home-center {
-    min-height: calc(100vh - 70px - 112px);
+    min-height: calc(100vh - 70px - 350px);
     display: grid;
     margin: 20px 0px;
     position: relative;
@@ -100,6 +100,7 @@ header {
 footer {
     background: var(--app-white-bg);
     width: 100%;
+    height: 350px;
     bottom: 0;
     left: 0;
 }
