--- a/src/stylesheet/base.css
+++ b/src/stylesheet/base.css
@@ -99,6 +99,7 @@ header {
 
 footer {
     background: var(--app-white-bg);
+    padding: 20px 0;
     width: 100%;
     bottom: 0;
     left: 0;
@@ -112,18 +113,14 @@ footer::before {
     width: 100%;
 }
   
-footer .content {
-    padding: 30px 0; 
-}
-  
-footer .content .top {
+footer .top {
     display: flex;
     align-items: center;
     justify-content: space-between;
     margin-bottom: 20px;
 }
 
-footer .content .top .logo-details {
+footer .top .logo-details {
     color: var(--app-dark-text-color);
     font-size: 30px;
 }
@@ -134,7 +131,7 @@ footer .logo-details {
     justify-content: center;
 }
   
-footer .logo_name {
+footer .logo-name {
     font-weight: 700;
     background: -webkit-linear-gradient(left, var(--app-purple) , var(--app-light-blue));
     background: -o-linear-gradient(right, var(--app-purple), var(--app-light-blue));
@@ -145,11 +142,11 @@ footer .logo_name {
     -webkit-text-fill-color: transparent;
 }
 
-footer .content .top .media-icons {
+footer .top .media-icons {
     display: flex;
 }
 
-footer .content .top .media-icons a {
+footer .top .media-icons a {
     height: 40px;
     width: 40px;
     margin: 0 8px;
@@ -207,36 +204,34 @@ footer .top .media-icons a:nth-child(5):hover {
     transform: translateY(-3px);
 }
   
-footer .content .link-boxes {
+footer .link-boxes {
     display: flex;
     justify-content: space-between;
 }
-  
 
-
-footer .content .link-boxes .box .link_name {
+footer .link-boxes .box .link-name {
     color: var(--app-dark-text-color);
     font-size: 20px;
-    font-weight: 400;
+    font-weight: 600;
     margin-bottom: 14px;
     position: relative;
 }
   
-footer .content .link-boxes .box li {
+footer .link-boxes .box li {
     margin: 6px 0;
     list-style: none;
 }
   
-footer .content .link-boxes .box li a {
+footer .link-boxes .box li a {
     color: var(--app-dark-text-color);
     font-size: 14px;
-    font-weight: 400;
+    color: var(--app-dark-text-color);
     text-decoration: none;
     opacity: 0.8;
     transition: all 0.4s ease;
 }
 
-footer .content .link-boxes .box li a:hover {
+footer .link-boxes .box li a:hover {
     opacity: 1;
     text-decoration: underline;
 }
@@ -255,8 +250,8 @@ footer .link-boxes .input-box input {
 }
 
 footer .link-boxes .input-box input::placeholder {
+    font-size: 14px;
     color: var(--app-medium-grey);
-    font-size: 16px;
 }
 
 footer .input-field:focus,
@@ -271,10 +266,10 @@ footer .link-boxes .input-box input[type="button"] {
     color: var(--app-light-text-color);
     border: 2px double var(--app-dark-text-color);
     border: none;
-    font-size: 18px;
-    font-weight: 500;
+    font-size: 13px;
+    font-weight: 700;
     margin: 10px 0;
-    box-shadow: rgba(0, 0, 0, 0.118) 0px 5px 3px 0px;
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 26px 30px -10px, rgba(0, 0, 0, 0.1) 0px 16px 10px -10px;
     opacity: 0.8;
     cursor: pointer;
     transition: all 0.4s ease;
@@ -285,42 +280,40 @@ footer .input-box input[type="button"]:hover {
     color: var(--app-light-text-color);
 }
 
-footer .bottom-details {
+footer .bottom-text {
     width: 100%;
-    background: var(--app-white-bg);
 }
   
-footer .bottom-details .bottom_text {
-    max-width: 1250px;
-    margin: auto;
-    padding: 20px 40px;
+footer .bottom-text {
+    margin-top: 20px;
     display: flex;
     justify-content: space-between;
+    border-top: 1px solid rgba(0, 0, 0, 0.1);
+    padding-top: 20px;
 }
 
-footer .bottom-details .bottom_text span,
-footer .bottom-details .bottom_text a {
+footer .bottom-text span,
+footer .bottom-text a {
     font-size: 14px;
-    font-weight: 300;
     color: var(--app-dark-text-color);
     opacity: 0.8;
     text-decoration: none;
 }
 
-footer .bottom-details .bottom_text a:hover {
+footer .bottom-text a + a{
+    margin-left: 20px;
+}
+
+footer .bottom-text a:hover {
     opacity: 1;
     text-decoration: underline;
 }
 
-footer .bottom-details .bottom_text a {
-    margin-right: 10px;
-}
-
 @media (max-width: 900px) {
-    footer .content .link-boxes .box {
+    footer .link-boxes .box {
         width: calc(100% / 5 - 10px);
     }
-    footer .content .link-boxes {
+    footer .link-boxes {
         flex-wrap: wrap;
     }
 }
@@ -329,52 +322,55 @@ footer .bottom-details .bottom_text a {
     footer {
         position: relative;
     }
-    footer .content .top .logo-details {
+    footer .top .logo-details {
         font-size: 26px;
     }
-    footer .content .top .media-icons a {
+    footer .top .media-icons a {
         height: 35px;
         width: 35px;
         font-size: 14px;
         line-height: 35px;
     }
-    footer .content .link-boxes .box {
+    footer .link-boxes .box {
         width: calc(100% / 3 - 10px);
     }
-    footer .content .link-boxes .input-box {
+    footer .link-boxes .input-box {
         width: 60%;
-    }
-    footer .bottom-details .bottom_text span,
-    footer .bottom-details .bottom_text a {
-        font-size: 12px;
     }
 }
 
 @media (max-width: 520px) {
+    footer .bottom-text {
+        display: grid;
+        justify-content: center;
+    }
     footer::before {
         top: 145px;
     }
-    footer .content .top {
+    footer .top {
         flex-direction: column;
     }
-    footer .content .top .media-icons {
+    footer .top .media-icons {
         margin-top: 16px;
     }
-    footer .content .link-boxes .box {
+    footer .link-boxes .box {
         width: calc(100% / 2 - 10px);
         text-align: center;
     }
-    footer .content .link-boxes .input-box {
+    footer .link-boxes .input-box {
         width: 100%;
     }
     footer .box {
         margin-bottom: 1rem;
     }
-    footer .policy_terms {
-        margin-left: 2rem;
+    footer .bottom-text .copyright-text {
+        display: block;
+        text-align: center;
+    }
+    footer .bottom-text .bottom-text a + a {
+        margin-left: 10px;
     }
 } 
-
 
 /**************************************************/
 /*****       Animations                      ******/
