--- a/src/stylesheet/base.css
+++ b/src/stylesheet/base.css
@@ -298,15 +298,16 @@ footer .bottom-text a {
     color: var(--app-dark-text-color);
     opacity: 0.8;
     text-decoration: none;
+    transition: all 0.4s ease-in-out;
 }
 
-footer .bottom-text a + a{
+footer .bottom-text a + a {
     margin-left: 20px;
 }
 
 footer .bottom-text a:hover {
     opacity: 1;
-    text-decoration: underline;
+    color: var(--app-light-blue-hover);
 }
 
 @media (max-width: 900px) {
